--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.0.10
   carousel_pro: ^1.0.0
   carousel_slider: ^4.1.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
